--- a/tech 4/trilha2/tsconfig.json
+++ b/tech 4/trilha2/tsconfig.json
@@ -6,8 +6,8 @@
     "esModuleInterop": true,  // Permite interoperabilidade com módulos ES6
     "forceConsistentCasingInFileNames": true, // Força diferenciação entre maiúsculas e minúsculas
     "skipLibCheck": true,     // Pula a verificação de tipos em arquivos de biblioteca
-    "outDir": "./dist"        // Pasta de saída para o código compilado
+    "outDir": "dist"        // Pasta de saída para o código compilado
   },
-  "include": ["trilha1/src/**/*"],    // Inclui todos os arquivos TypeScript na pasta src
+  "include": ["src/**/*"],    // Inclui todos os arquivos TypeScript na pasta src
   "exclude": ["node_modules"] // Exclui a pasta node_modules
 }
